@@ -1,4 +1,9 @@
 0.1.8
+Added Show/Hide docviewer to 'View' menu.
+Added runtime check for doxygen.
+Added default doxygen config file to "/usr/share/KKEdit/docs"
+Added doxygen document builder to 'File' menu.
+Stopped loads of pointless javasript warnings on stdout when using the docviewer for certain pages.
 Root desktop file now uses the graphical su path defined by configure ( defaults to /usr/bin/gtksu ).
 Can now set default path to graphical su at compile time with "--with-gsu-path" option.
 Added 'Highlight All' to regex find.
